<resources>
    <string name="app_name">MVVMDEMO</string>
    /** 注册界面 **/
    <string name="edit_phone">填写电话号码</string>
    <string name="edit_password">设置密码</string>
    <string name="comfirm_password">再次确认密码</string>
    <string name="enter_code">填写验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="third_party_sign_up">第三方注册</string>
    <string name="qq">QQ</string>
    <string name="wechat">微信</string>
    <string name="webo">微博</string>
    <string name="sing_up">注册</string>
    <string name="sing_in">登录</string>
    <string name="sing_up_page">注册账号</string>
    /** 登录界面 **/
    <string name="enter_phone">填写账号</string>
    <string name="enter_password">填写密码</string>
    <string name="third_party_sign_in">第三方登录</string>
    <string name="sign_in_fail">登录失败</string>
    <string name="please_sign_in_phone">请输入账号</string>
    <string name="please_sign_in_password">请输入密码</string>
</resources>
