<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="signUpViewModel"
            type="com.example.xiaohonghu.mvvmdemo.viewmodel.SignUpViewModel"/>

        <!--<variable name="signUpBean"-->
                  <!--type="com.example.xiaohonghu.mvvmdemo.requery.RequerySignUpBean"/>-->

        <!--<variable name="baseBean"-->
                  <!--type="com.example.xiaohonghu.mvvmdemo.observable.BaseBeanObservable"/>-->

    </data>


    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:minHeight="151dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/edit_phone"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038"
            app:met_iconLeft="@mipmap/ic_phone"
            app:met_maxCharacters="11"

            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/edit_password"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/et_comfirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            app:met_iconLeft="@mipmap/ic_password"
            app:met_maxCharacters="16"
            tools:ignore="MissingConstraints"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_comfirm_password"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/comfirm_password"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/et_verification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:met_iconLeft="@mipmap/ic_password"
            app:met_maxCharacters="16"
            tools:ignore="MissingConstraints"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_verification"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:hint="@string/enter_code"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/get_code"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:met_iconLeft="@mipmap/ic_verification"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/et_comfirm_password"
           />



        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/get_code"
            app:layout_constraintBottom_toBottomOf="@+id/et_verification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_verification"
            fancy:fb_defaultColor="#7ab800"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_radius="10dp"
            android:onClick="@{() -> signUpViewModel.getVerification()}"
            tools:ignore="MissingConstraints"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/et_verification"
            android:text="@string/third_party_sign_up"
            app:layout_constraintBottom_toTopOf="@+id/btn_weichat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_qq"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_weibo"
            app:layout_constraintStart_toStartOf="parent"
            fancy:fb_defaultColor="#ffffffff"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_iconResource="@mipmap/social_qq"
            fancy:fb_radius="64dp"
            fancy:fb_textColor="#FFFFFF"
            tools:ignore="MissingConstraints"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_weichat"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/btn_weibo"
            app:layout_constraintEnd_toStartOf="@+id/btn_weibo"
            app:layout_constraintStart_toEndOf="@+id/btn_qq"
            app:layout_constraintTop_toTopOf="@+id/btn_weibo"
            app:layout_constraintVertical_bias="0.0"
            fancy:fb_defaultColor="#ffffffff"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_iconResource="@mipmap/wechat"
            fancy:fb_radius="64dp"
            fancy:fb_textColor="#FFFFFF"
            tools:ignore="MissingConstraints"/>

        <mehdi.sakout.fancybuttons.FancyButton
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/btn_weibo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            fancy:fb_defaultColor="#ffffffff"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_iconResource="@mipmap/ic_webo"
            fancy:fb_radius="64dp"
            fancy:fb_textColor="#FFFFFF"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="336dp"/>


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_spotify"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#7ab800"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition="left"
            fancy:fb_text="@string/sing_up"
            fancy:fb_textColor="#FFFFFF"
            android:onClick="@{() -> signUpViewModel.signUp()}"
            fancy:fb_textSize="20sp"/>

    </android.support.constraint.ConstraintLayout>
</layout>