<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.xiaohonghu.mvvmdemo.view.SignInActivity"
    >

    <data>
        <variable
            name="userBean"
            type="com.example.xiaohonghu.mvvmdemo.requery.RequeryUserBean"/>

        <variable
            name="signInViewModel"
            type="com.example.xiaohonghu.mvvmdemo.viewmodel.SignInViewModel"/>

    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
   >

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/signin_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/edit_phone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:met_iconLeft="@mipmap/ic_phone"
        app:met_maxCharacters="11"
        tools:layout_editor_absoluteY="25dp"
        android:text="@{userBean.phone}"
        android:onTextChanged="@{signInViewModel::onTextPhoneChanged}"
        tools:ignore="MissingConstraints"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_et_phone"
        app:met_iconLeft="@mipmap/ic_password"
        app:met_maxCharacters="11"
        android:text="@{userBean.password}"
        android:onTextChanged="@{signInViewModel::onTextPasswordChanged}"
        tools:ignore="MissingConstraints"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_spotify"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="10dp"
        fancy:fb_text="@string/sing_in"
        android:onClick="@{() -> signInViewModel.signIn()}"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="20sp"/>

    <TextView
        android:id="@+id/textView_singin"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/third_party_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/btn_weichat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_qq"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_weichat"
        app:layout_constraintTop_toBottomOf="@+id/textView_singin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_weichat"
        fancy:fb_defaultColor="#ffffffff"
        fancy:fb_focusColor="#313131"
        fancy:fb_iconPaddingLeft="0dp"
        fancy:fb_iconPaddingRight="0dp"
        fancy:fb_iconResource="@mipmap/social_qq"
        fancy:fb_radius="64dp"
        fancy:fb_textColor="#FFFFFF"
        tools:ignore="MissingConstraints"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_weichat"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_weibo"
        app:layout_constraintStart_toEndOf="@+id/btn_qq"
        fancy:fb_defaultColor="#ffffffff"
        fancy:fb_focusColor="#313131"
        fancy:fb_iconPaddingLeft="0dp"
        fancy:fb_iconPaddingRight="0dp"
        fancy:fb_iconResource="@mipmap/wechat"
        fancy:fb_radius="64dp"
        fancy:fb_textColor="#FFFFFF"
        tools:ignore="MissingConstraints"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_weibo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_weichat"
        app:layout_constraintTop_toBottomOf="@+id/textView_singin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_weichat"
        fancy:fb_defaultColor="#ffffffff"
        fancy:fb_focusColor="#313131"
        fancy:fb_iconPaddingLeft="0dp"
        fancy:fb_iconPaddingRight="0dp"
        fancy:fb_iconResource="@mipmap/ic_webo"
        fancy:fb_radius="64dp"
        fancy:fb_textColor="#FFFFFF"
        tools:ignore="MissingConstraints"/>



</android.support.constraint.ConstraintLayout>
</layout>